data/derived/fa15/progs/unify/prog2213.ml.out
Characters 20-21:
  let _ = eval(VarX , 3, 2);;
                      ^
Error: This expression has type int but an expression was expected of type
         float
